--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "devDependencies": {
     "@types/node": "^20.11.30",
     "typescript": "^5.4.3",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.4.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.10"
   }
 }
