--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,14 @@
 
 ],
 "rules": {
-    "no-useless-constructor":"off"
+    "camelcase": "off",
+    "no-useless-constructor":"off",
+    "prettier/prettier": [
+        "error",
+        {
+          "endOfLine": "auto"
+        }
+      ]
 },
     "env": {
         "vitest-globals/env": true
